examples.txt
if (1 ? 2 : 3) == 2:
	print "Hello, world!"
else
	print "Hello... world?"

if 5 == 5
	print "foo", "bar";

print #"this is just a regular print statement.";
oak: now lexing...
[   KEYWORD][keyw:        if][len:    2][value:if]
[  OPERATOR][prec:        15][len:    1][value:(]
[   INTEGER][data:         1][len:    1][value:1]
[  OPERATOR][prec:         3][len:    1][value:?]
[   INTEGER][data:         2][len:    1][value:2]
[    SYMBOL][symb:         :][len:    1][value::]
[   INTEGER][data:         3][len:    1][value:3]
[    SYMBOL][symb:         )][len:    1][value:)]
[  OPERATOR][prec:         9][len:    2][value:==]
[   INTEGER][data:         2][len:    1][value:2]
[    SYMBOL][symb:         :][len:    1][value::]
[   KEYWORD][keyw:     print][len:    5][value:print]
[    STRING][               ][len:   15][value:Hello, world!]
[   KEYWORD][keyw:      else][len:    4][value:else]
[   KEYWORD][keyw:     print][len:    5][value:print]
[    STRING][               ][len:   17][value:Hello... world?]
[   KEYWORD][keyw:        if][len:    2][value:if]
[   INTEGER][data:         5][len:    1][value:5]
[  OPERATOR][prec:         9][len:    2][value:==]
[   INTEGER][data:         5][len:    1][value:5]
[   KEYWORD][keyw:     print][len:    5][value:print]
[    STRING][               ][len:    5][value:foo]
[  OPERATOR][prec:         1][len:    1][value:,]
[    STRING][               ][len:    5][value:bar]
[    SYMBOL][symb:         ;][len:    1][value:;]
[   KEYWORD][keyw:     print][len:    5][value:print]
[       END][               ][len:    1][value:]
oak: now parsing...
test.k:3:2: error: unexpected token 'else'; expected ';'
	else
	^~~~
test.k:6:2: error: unexpected token 'if'; expected ';'
	if 5 == 5
	^~
test.k:7:3: error: unexpected token 'print'; expected ';'
		print "foo", "bar";
		^~~~~
test.k:9:2: error: unexpected end-of-file; expected an expression
	print #"this is just a regular print statement.";
	^~~~~

if (1 ? 2 : 3) == 2:
	print "Hello, world!";
else
	print "Hello... world?";

if 5 == 5:
	print "foo", "bar";

print "this is just a regular print statement.";
oak: now lexing...
[   KEYWORD][keyw:        if][len:    2][value:if]
[  OPERATOR][prec:        15][len:    1][value:(]
[   INTEGER][data:         1][len:    1][value:1]
[  OPERATOR][prec:         3][len:    1][value:?]
[   INTEGER][data:         2][len:    1][value:2]
[    SYMBOL][symb:         :][len:    1][value::]
[   INTEGER][data:         3][len:    1][value:3]
[    SYMBOL][symb:         )][len:    1][value:)]
[  OPERATOR][prec:         9][len:    2][value:==]
[   INTEGER][data:         2][len:    1][value:2]
[    SYMBOL][symb:         :][len:    1][value::]
[   KEYWORD][keyw:     print][len:    5][value:print]
[    STRING][               ][len:   15][value:Hello, world!]
[    SYMBOL][symb:         ;][len:    1][value:;]
[   KEYWORD][keyw:      else][len:    4][value:else]
[   KEYWORD][keyw:     print][len:    5][value:print]
[    STRING][               ][len:   17][value:Hello... world?]
[    SYMBOL][symb:         ;][len:    1][value:;]
[   KEYWORD][keyw:        if][len:    2][value:if]
[   INTEGER][data:         5][len:    1][value:5]
[  OPERATOR][prec:         9][len:    2][value:==]
[   INTEGER][data:         5][len:    1][value:5]
[    SYMBOL][symb:         :][len:    1][value::]
[   KEYWORD][keyw:     print][len:    5][value:print]
[    STRING][               ][len:    5][value:foo]
[  OPERATOR][prec:         1][len:    1][value:,]
[    STRING][               ][len:    5][value:bar]
[    SYMBOL][symb:         ;][len:    1][value:;]
[   KEYWORD][keyw:     print][len:    5][value:print]
[    STRING][               ][len:   41][value:this is just a regular print statement.]
[    SYMBOL][symb:         ;][len:    1][value:;]
[       END][               ][len:    1][value:]
oak: now parsing...
(stmt if)
|-- (binary ==)
|   |-- (ternary ?)
|   |   |-- (integer 1)
|   |   |-- (integer 2)
|   |   `-- (integer 3)
|   `-- (integer 2)
|-- (stmt print)
|   `-- (string "Hello, world!")
`-- (stmt print)
    `-- (string "Hello... world?")
(stmt if)
|-- (binary ==)
|   |-- (integer 5)
|   `-- (integer 5)
`-- (stmt print)
    |-- (string "foo")
    `-- (string "bar")
(stmt print)
`-- (string "this is just a regular print statement.")
oak: input:
a = 420 * 666 + 6969

if true {
	print "Hello, world!"
	print "other stuff"
	print "new stuff"
} else if false {
	print "Hello... world?"
	print "blah"
}

if 5 == 5:
	print "foo", "bar"

print "foo bar baz"

oak: now lexing...
[IDENTIFIER][               ][len:    1][eol:false][value:a]
[    SYMBOL][symb:         =][len:    1][eol:false][value:=]
[   INTEGER][data:       420][len:    3][eol:false][value:420]
[    SYMBOL][symb:         *][len:    1][eol:false][value:*]
[   INTEGER][data:       666][len:    3][eol:false][value:666]
[    SYMBOL][symb:         +][len:    1][eol:false][value:+]
[   INTEGER][data:      6969][len:    4][eol: true][value:6969]
[   KEYWORD][keyw:        if][len:    2][eol:false][value:if]
[  OPERATOR][               ][len:    4][eol:false][value:true]
[    SYMBOL][symb:         {][len:    1][eol: true][value:{]
[   KEYWORD][keyw:     print][len:    5][eol:false][value:print]
[    STRING][               ][len:   15][eol: true][value:Hello, world!]
[   KEYWORD][keyw:     print][len:    5][eol:false][value:print]
[    STRING][               ][len:   13][eol: true][value:other stuff]
[   KEYWORD][keyw:     print][len:    5][eol:false][value:print]
[    STRING][               ][len:   11][eol: true][value:new stuff]
[    SYMBOL][symb:         }][len:    1][eol:false][value:}]
[   KEYWORD][keyw:      else][len:    4][eol:false][value:else]
[   KEYWORD][keyw:        if][len:    2][eol:false][value:if]
[  OPERATOR][               ][len:    5][eol:false][value:false]
[    SYMBOL][symb:         {][len:    1][eol: true][value:{]
[   KEYWORD][keyw:     print][len:    5][eol:false][value:print]
[    STRING][               ][len:   17][eol: true][value:Hello... world?]
[   KEYWORD][keyw:     print][len:    5][eol:false][value:print]
[    STRING][               ][len:    6][eol: true][value:blah]
[    SYMBOL][symb:         }][len:    1][eol: true][value:}]
[   KEYWORD][keyw:        if][len:    2][eol:false][value:if]
[   INTEGER][data:         5][len:    1][eol:false][value:5]
[    SYMBOL][symb:        ==][len:    2][eol:false][value:==]
[   INTEGER][data:         5][len:    1][eol:false][value:5]
[    SYMBOL][symb:         :][len:    1][eol: true][value::]
[   KEYWORD][keyw:     print][len:    5][eol:false][value:print]
[    STRING][               ][len:    5][eol:false][value:foo]
[    SYMBOL][symb:         ,][len:    1][eol:false][value:,]
[    STRING][               ][len:    5][eol: true][value:bar]
[   KEYWORD][keyw:     print][len:    5][eol:false][value:print]
[    STRING][               ][len:   13][eol: true][value:foo bar baz]
[      BOOL][               ][len:    1][eol:false][value:]
oak: now parsing...
(root)
|-- (stmt expression)
|   `-- (binary =)
|       |-- (identifier a)
|       `-- (binary +)
|           |-- (binary *)
|           |   |-- (integer 420)
|           |   `-- (integer 666)
|           `-- (integer 6969)
|-- (stmt if)
|   |-- (condition)
|   |   `-- (bool true)
|   |-- (then branch)
|   |   `-- (stmt block)
|   |       |-- (stmt print)
|   |       |   `-- (string "Hello, world!")
|   |       |-- (stmt print)
|   |       |   `-- (string "other stuff")
|   |       `-- (stmt print)
|   |           `-- (string "new stuff")
|   `-- (else branch)
|       `-- (stmt if)
|           |-- (condition)
|           |   `-- (bool false)
|           `-- (then branch)
|               `-- (stmt block)
|                   |-- (stmt print)
|                   |   `-- (string "Hello... world?")
|                   `-- (stmt print)
|                       `-- (string "blah")
|-- (stmt if)
|   |-- (condition)
|   |   `-- (binary ==)
|   |       |-- (integer 5)
|   |       `-- (integer 5)
|   `-- (then branch)
|       `-- (stmt print)
|           |-- (string "foo")
|           `-- (string "bar")
`-- (stmt print)
    `-- (string "foo bar baz")
